# AI-Training

./: .gitignore  LICENSE  requirements.txt
02-GenerativeAI/: .gitignore  requirements.txt
02-GenerativeAI/01-LangChain_BootCamp/00-ModelIO/: 00-UsingLLMs.ipynb  01-PromptTemplates.ipynb  02-FewShotPromptTemplate.ipynb  03-ParsingOutput.ipynb  04-Serialization.ipynb  05-ModelIOExercise.ipynb  prompt.json
02-GenerativeAI/01-LangChain_BootCamp/01-DataConnections/: 00-DocumentLoaders.ipynb  01-TransformersEmbeddings.ipynb  02-VectorStores.ipynb  03-MultiQueryRetrieval.ipynb  04-ContextCompression.ipynb  05-ExerciseLegalBot.ipynb
02-GenerativeAI/01-LangChain_BootCamp/02-Memory/: 01-LLMMemory.ipynb  memory.pkl
02-GenerativeAI/01-LangChain_BootCamp/03-Chains/: 01-LLMChains.ipynb  02-LLMRouterChains.ipynb  03-LLMTransformChain.ipynb  04-ChainsExercise.ipynb
02-GenerativeAI/01-LangChain_BootCamp/04-Agents/: 01-BasicsAgents.ipynb
02-GenerativeAI/01-LangChain_BootCamp/some_data/US_Constitution/: chroma.sqlite3
02-GenerativeAI/02-LangChain-DevLLMPoweredApps/: 01-SinglePromptChaining.py  02-SinglePromptChainingOllama.py
02-GenerativeAI/02-LangChain-DevLLMPoweredApps/03-Icebreaker/: Icebreaker.py  app.py  output_parsers.py
02-GenerativeAI/02-LangChain-DevLLMPoweredApps/04-IntroVectorDbs/: .gitignore  InMemory.py  ingestion.py  main-LCEL.py  main.py  mediumblog1.txt
02-GenerativeAI/02-LangChain-DevLLMPoweredApps/05-DocumentationHelperBot/: download_docs.py  ingestion.py  main.py
02-GenerativeAI/02-LangChain-DevLLMPoweredApps/06-CodeInterpreter/: main.py
02-GenerativeAI/02-LangChain-DevLLMPoweredApps/07-ToolCalling/: main.py
03-CrewAI/: requirements.txt
03-CrewAI/01-CrewAI-Usage/: main.py
03-CrewAI/01-Usage/: main.py
03-CrewAI/ai_news/: .gitignore  README.md  pyproject.toml
03-CrewAI/ai_news/src/ai_news/: crew.py  main.py  (+1 more)
03-CrewAI/code_execution/: README.md  pyproject.toml
03-CrewAI/code_execution/src/code_execution/: crew.py  main.py
03-CrewAI/code_execution/src/code_execution/config/: agents.yaml  tasks.yaml
03-CrewAI/latest_developments_ollama/: .gitignore  README.md  pyproject.toml
03-CrewAI/latest_developments_ollama/src/latest_developments_ollama/: crew.py  main.py
03-CrewAI/latest_developments_ollama_manual/: .gitignore  README.md  pyproject.toml
03-CrewAI/latest_developments_ollama_manual/src/latest_developments/: crew.py  main.py
03-CrewAI/marketing_strategy/: README.md  pyproject.toml
03-CrewAI/marketing_strategy/src/marketing_strategy/: crew.py  main.py
03-CrewAI/marketing_strategy/src/marketing_strategy/config/: agents.yaml  tasks.yaml
03-CrewAI/meeting_minutes/: .gitignore  README.md  pyproject.toml
03-CrewAI/pdf_rag/: .gitignore  README.md  pyproject.toml
03-CrewAI/pdf_rag_1/: .gitignore  README.md  pyproject.toml
03-CrewAI/pdf_rag_1/src/pdf_rag_1/: crew.py  main.py
03-CrewAI/pdf_rag_1/src/pdf_rag_1/config/: agents.yaml  tasks.yaml
03-CrewAI/pdf_rag_custom_model/: Readme.txt  main.py
03-CrewAI/poem_flow/: README.md  pyproject.toml
03-CrewAI/surprise_trip/: README.md  pyproject.toml
03-CrewAI/surprise_trip/src/surprise_trip/: crew.py  main.py
03-CrewAI/surprise_trip/src/surprise_trip/config/: agents.yaml  tasks.yaml
04-BasicToAdvanced-RAG/: requirements.txt
04-BasicToAdvanced-RAG/vector_db/: different_embedding_types.py  simple_embedding.py  vector_db_faiss.py  vector_db_faiss_annoy.py
05-LangGraph/01-Reflection Agent/: chains.py  constants.py  main.py
05-LangGraph/02-Reflexion Agent/: chains.py  schemas.py
06-Agno(PhiData)/: Home.py
06-Agno(PhiData)/agents/: finance_agent.py  holiday_planner_agent.py  movie_script_agent.py  research_agent.py  simple_rag_agent.py  study_planner_agent.py  web_search_agent.py  youtube_timestamp_agent.py
06-Agno(PhiData)/pages/: 1_Web_Search.py  2_Finance_Agent.py  3_Holiday_Planner.py
(+23 files in other folders)
