[project]
name = "code_execution"
version = "0.1.0"
description = "code_execution using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.102.0,<1.0.0"
]

[project.scripts]
code_execution = "code_execution.main:run"
run_crew = "code_execution.main:run"
train = "code_execution.main:train"
replay = "code_execution.main:replay"
test = "code_execution.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
