[project]
name = "latest_developments_ollama"
version = "0.1.0"
description = "Latest-Developments-ollama using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.102.0,<1.0.0"
]

[project.scripts]
latest_developments_ollama = "latest_developments_ollama.main:run"
run_crew = "latest_developments_ollama.main:run"
train = "latest_developments_ollama.main:train"
replay = "latest_developments_ollama.main:replay"
test = "latest_developments_ollama.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
