[project]
name = "latest_developments"
version = "0.1.0"
description = "Latest-Developments using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.102.0,<1.0.0"
]

[project.scripts]
latest_developments = "latest_developments.main:run"
run_crew = "latest_developments.main:run"
train = "latest_developments.main:train"
replay = "latest_developments.main:replay"
test = "latest_developments.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
