[project]
name = "marketing_strategy"
version = "0.1.0"
description = "marketing_strategy using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.102.0,<1.0.0"
]

[project.scripts]
marketing_strategy = "marketing_strategy.main:run"
run_crew = "marketing_strategy.main:run"
train = "marketing_strategy.main:train"
replay = "marketing_strategy.main:replay"
test = "marketing_strategy.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
