[project]
name = "pdf_rag_1"
version = "0.1.0"
description = "pdf_rag_1 using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.102.0,<1.0.0"
]

[project.scripts]
pdf_rag_1 = "pdf_rag_1.main:run"
run_crew = "pdf_rag_1.main:run"
train = "pdf_rag_1.main:train"
replay = "pdf_rag_1.main:replay"
test = "pdf_rag_1.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
